--- a/src/Smartstore.Web/Views/Catalog/RecentlyAddedProducts.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/RecentlyAddedProducts.cshtml
@@ -19,7 +19,7 @@
         
         <div class="col col-auto">
             <a asp-route="RecentlyAddedProductsRSS" class="btn btn-warning" title="@T("Products.NewProducts.RSS.Hint")">
-                <i class="fa fa-rss"></i>
+                <i class="fa fa-rss" aria-hidden="true"></i>
                 <span>@T("Products.NewProducts.RSS")</span>
             </a>
         </div>
@@ -32,7 +32,7 @@
         }
         else
         {
-            <div class="alert alert-warning">
+            <div class="alert alert-warning" role="alert">
                 @T("Common.ListIsEmpty")
             </div>
         }
