--- a/src/Smartstore.Web/Views/Shared/Components/HomeProducts/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/HomeProducts/Default.cshtml
@@ -2,18 +2,10 @@
 
 @model ProductSummaryModel
 
-@{ 
-	if (Model.PagedList.TotalCount == 0)
-	{
-		return;
-	}
-}
-
-<div class="product-grid product-grid-home-page block">
+<div sm-if="Model.PagedList.TotalCount > 0" role="region" aria-labelledby="homepage-products-title" class="product-grid product-grid-home-page block">
 	<div class="heading heading-center">
-		<h3 class="heading-title fs-h1">@T("HomePage.Products")</h3>
+        <h3 id="homepage-products-title" class="heading-title fs-h1">@T("HomePage.Products")</h3>
 	</div>
-
     <div class="block-body pt-3 artlist-no-separators">
 		<partial name="Product.List" model="Model" />
     </div>
