--- a/src/Smartstore.Web/Views/Shared/Components/RecentlyViewedProducts/Default.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Components/RecentlyViewedProducts/Default.cshtml
@@ -2,16 +2,9 @@
 
 @model ProductSummaryModel
 
-@{
-    if (Model.Items.Count == 0)
-    {
-        return;
-    }
-}
-
-<div class="product-grid recently-viewed-product-grid block block-boxed">
+<div sm-if="Model.Items.Count > 0" role="region" aria-labelledby="recently-viewed-product-title" class="product-grid recently-viewed-product-grid block block-boxed">
     <div class="block-title">
-        <h3>@T("Products.RecentlyViewedProducts")</h3>
+        <h3 id="recently-viewed-product-title">@T("Products.RecentlyViewedProducts")</h3>
     </div>
     <div class="block-body pt-0">
         <div class="artlist-carousel">
