--- a/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Layouts/_Layout.cshtml
@@ -112,6 +112,7 @@
     <a href="#" id="scroll-top" class="scrollto d-flex align-items-center justify-content-center shadow-sm" aria-label="@T("Common.ScrollUp")">
         <i class="fa fa-lg fa-angle-up"></i>
     </a>
+    <span id="sr-desc-empty" class="sr-only"></span>
 </div>
 
 <partial name="Notifications" />
