--- a/src/Smartstore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -3,7 +3,7 @@
 @model ProductSummaryModel
 
 <div class="offcanvas-cart-body offcanvas-scrollable">
-    <div sm-if="!Model.Items.Any()" class="no-items" role="status">
+    <div sm-if="Model.Items.Count == 0" class="no-items" role="status">
         <h4 class="no-item-title">
             @T("ShoppingCart.Mini.EmptyCompare.Title")
         </h4>
@@ -15,7 +15,7 @@
         </p>
     </div>
 
-    <div sm-if="Model.Items.Any()" class="offcanvas-cart-items">
+    <div sm-if="Model.Items.Count > 0" class="offcanvas-cart-items">
         @foreach (var item in Model.Items)
         {
             <div class="offcanvas-cart-item">
@@ -47,12 +47,14 @@
                                 </span>
                             </div>
                             <div class="col-auto text-nowrap">
-                                <button class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"
+                                <button data-href='@Url.Action("RemoveProductFromCompare", "Catalog", new { id = item.Id })'
                                         type="button"
-                                        data-href='@Url.Action("RemoveProductFromCompare", "Catalog", new { id = item.Id })'
+                                        class="btn btn-secondary btn-to-danger btn-sm btn-icon remove ajax-cart-link"                                       
+                                        title="@T("Common.Remove")"
+                                        aria-label="@T("Common.Remove") @item.Name"
+                                        aria-describedby="sr-desc-empty"
                                         data-type="compare"
-                                        data-action="remove"
-                                        title='@T("Common.Remove")'>
+                                        data-action="remove">
                                     <i class="far fa-trash-can" aria-hidden="true"></i>
                                 </button>
                             </div>
@@ -66,7 +68,7 @@
     </div>
 </div>
 
-<div sm-if="Model.Items.Any()" class="offcanvas-cart-footer">
+<div sm-if="Model.Items.Count > 0" class="offcanvas-cart-footer">
     <div class="offcanvas-cart-footer-row no-gutters">
         <div class="col pr-2">
             <a class="btn btn-clear btn-block btn-action" asp-route="CompareProducts">
@@ -75,10 +77,14 @@
             </a>
         </div>
         <div class="col pl-2">
-            <a class="btn btn-clear btn-block btn-action ajax-cart-link" href="#" data-href="@Url.Action("ClearCompareList")" rel="nofollow" data-type="compare" data-action="remove">
+            <button data-href="@Url.Action("ClearCompareList", "Catalog")"
+                    type="button"
+                    class="btn btn-clear btn-block btn-action ajax-cart-link"
+                    data-type="compare"
+                    data-action="remove">
                 <i class="fal fa-trash-can" aria-hidden="true"></i>
                 <span>@T("Products.Compare.Clear")</span>
-            </a>
+            </button>
         </div>
     </div>
 </div>
