--- a/src/Smartstore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
+++ b/src/Smartstore.Web/Views/Catalog/Partials/OffCanvasCompare.cshtml
@@ -23,7 +23,7 @@
                     <div class="col col-alpha">
                         @if (item.Image != null && item.Image.HasImage())
                         {
-                            <a class="img-center-container" asp-route="Product" asp-route-SeName="@item.SeName" title="@item.Image.Title">
+                            <a class="img-center-container" asp-route="Product" asp-route-SeName="@item.SeName" aria-hidden="true" tabindex="-1">
                                 <img sm-model="item.Image" attr-alt='(item.Image.Alt.IsEmpty(), item.Name)' />
                             </a>
                         }
@@ -36,7 +36,7 @@
                         @if (item.ShortDescription.HasValue() == true)
                         {
                             <div sm-language-attributes-for="item.ShortDescription" class="short-desc text-muted">
-                                @Html.Raw(item.ShortDescription.Value.Truncate(120, "..."))
+                                @Html.Raw(item.ShortDescription.Value.Truncate(120, "…"))
                             </div>
                         }
 
