--- a/src/Smartstore.Web/Views/Shared/Partials/PhotoSwipe.cshtml
+++ b/src/Smartstore.Web/Views/Shared/Partials/PhotoSwipe.cshtml
@@ -8,10 +8,10 @@
             <div class="pswp__item"></div>
         </div>
         <div class="pswp__ui pswp__ui--hidden">
-            <div class="pswp__top-bar hstack">
-                <div class="pswp__counter"></div>
+            <div class="pswp__top-bar px-2 hstack">
+                <div class="pswp__counter badge badge-dark mr-2"></div>
                 <div class="pswp__zoom-controls hstack">
-                    <button class="pswp__button pswp-action pswp__button--fs" title="Toggle fullscreen"></button>
+                    <button class="pswp__button pswp-action pswp__button--fs mr-1" title="Toggle fullscreen"></button>
                     <button class="pswp__button pswp-action pswp__button--zoom" title="Zoom in/out"></button>
                 </div>
                 <button class="pswp__button pswp__button--close ml-auto" title="Close (Esc)">&#215;</button>
